--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -48,7 +48,8 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=ref,event=pr
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') }}
+            type=raw,value=edge,enable={{is_default_branch}}
             type=sha,prefix=sha-
 
       - name: Build and push Docker image
